<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Menu_Buscar_registros"
        android:title="@string/Menu_Buscar_registros"
        android:icon="@drawable/icono_buscar_registros"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />


    <item
        android:id="@+id/menu_Ordenar_registros"
        android:title="@string/menu_Ordenar_registros"
        android:icon="@drawable/icono_ordenar_registros"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/Menu_Numero_Registros"
        android:title="@string/Menu_Numero_Registros"
        android:icon="@drawable/icono_numero_registros"
        app:showAsAction="ifRoom"
        />


</menu>